testdata/rules-tests/bad/AG-019-v1-kotlin-null-assertion.kt
fun getUser(id: Long): User {
    return db.findUser(id)!!
}

fun getTokenPayload(token: String): Map<String, Any> {
    val decoded = jwt.decode(token)
    return decoded!!.claims
}
